<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="maximedelange.csi_week_1_rebuild.MainActivity"
    style="@style/outerBackgroundStyle"
    android:gravity="center_vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTintMode="src_in"
        android:id="@+id/linearLayout"
        style="@style/backgroundStyle"
        android:background="@drawable/buttonshape">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:id="@+id/imageViewCriminal"
            android:src="@mipmap/maxime"
            android:contentDescription="Suspect"
            style="@style/backgroundStyle"
            android:background="@drawable/buttonshape"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginLeft="-350dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/lineschape"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="-340dp"
            style="@style/textbackgroundStyle"
            android:gravity="center"
            android:layout_gravity="bottom">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="350dp"
                android:layout_height="20dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/Name"
                    android:id="@+id/textViewCriminalName"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    style="@style/textStyle"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="350dp"
                android:layout_height="20dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/Gender"
                    android:id="@+id/textViewCriminalGender"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:textColor="@color/yellow_red"
                    style="@style/textStyle"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="350dp"
                android:layout_height="20dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/Age"
                    android:id="@+id/textViewCriminalAge"
                    android:clickable="true"
                    android:textColor="@color/yellow_red"
                    style="@style/textStyle"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/Bounty"
                    android:id="@+id/textViewCriminalBounty"
                    android:clickable="true"
                    android:textColor="@color/yellow_red"
                    style="@style/textStyle"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:gravity="center_horizontal">

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/scrollView">

                    <TextView
                        android:layout_width="350dp"
                        android:layout_height="30dp"
                        android:text="@string/Description"
                        android:id="@+id/textViewCriminalDescription"
                        android:clickable="true"
                        android:textColor="@color/yellow_red"
                        style="@style/textStyle.2"
                        android:gravity="center" /> <!-- Gebruik maken van inheritance text style -->
                </ScrollView>
            </LinearLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:id="@+id/listOfCrimes" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Report"
                    android:id="@+id/Report"
                    android:layout_column="10"
                    android:layout_marginLeft="-220dp"
                    android:layout_marginTop="80dp"
                    style="@style/buttonStyle"
                    android:background="@drawable/buttonshape"
                    android:gravity="center" />


            </TableRow>

        </TableLayout>

    </LinearLayout>

</RelativeLayout>
